# clipshare

./: '  Cargo.toml  TODO.md
src/: app.rs  clipboard.rs  clipshare.rs  config.rs  consts.rs  device.rs  discover.rs  lib.rs  main.rs  pubsub.rs  ws.rs
src/clipshare/: device.rs  mod.rs  settings.rs
src/connect/: address.rs  client.rs  discover.rs  mod.rs  server.rs  socket.rs
src/gtk/widgets/: app.rs  configure.rs  configure_dialog.rs  device_view.rs  history.rs  history_entry.css  mod.rs
src/ui/: mod.rs
src/ui/gtk/: clipshare.css
src/ui/gtk/widgets/: app.rs  device_panel.rs  device_view.rs  history.css  history.rs  history_entry.rs  history_view.rs  mod.rs
src/widgets/: app.rs
