[package]
name = "clipshare"
version = "0.1.0"
edition = "2021"
authors = ["Joseph Diza <josephm.diza@gmail.com>"]
license = "MIT"
repository = "https://github.com/jmdaemon/clipshare"
homepage = "https://github.com/jmdaemon/clipshare"
description = "Share your clipboard contents across devices"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4", features = ["serde"] }
pretty_env_logger = "0.4"
hyper = { version = "1.0.0-rc.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.1"
bytes = { version = "1.3.0", features = ["serde"] }

#[[cshare]]
#name = "client"
#path = "client.rs"

#[[cshare]]
#name = "server"
#path = "server.rs"
