[package]
name = "clipshare"
version = "0.1.0"
edition = "2021"
authors = ["Joseph Diza <josephm.diza@gmail.com>"]
license = "MIT"
repository = "https://github.com/jmdaemon/clipshare"
homepage = "https://github.com/jmdaemon/clipshare"
description = "Share your clipboard contents across devices"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4", features = ["serde"] }
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
tungstenite = { version = "0.18.0", features = ["rustls"] }
futures = "0.3"
url = "2.3.1"
directories = "4.0"
relm4 = "0.5.0"
const_format = "0.2.30"
