[package]
name = "clipshare"
version = "0.1.0"
edition = "2021"
authors = ["Joseph Diza <josephm.diza@gmail.com>"]
license = " GPL-3.0-or-later"
repository = "https://github.com/jmdaemon/clipshare"
homepage = "https://github.com/jmdaemon/clipshare"
description = "Share your clipboard contents across devices"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
const_format = "0.2.30"
derivative = "2.2.0"
directories = "4.0"
futures = "0.3"
hostname = "0.3.1"
local-ip-address = "0.5.1"
log = { version = "0.4", features = ["serde"] }
mdns = "3.0.0"
mdns-sd = "0.6.1"
pretty_env_logger = "0.4"
relm4 = { version = "0.5.0", optional=true}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
tungstenite = { version = "0.18.0", features = ["rustls"] }
url = "2.3.1"

[features]
default = ["gtk"]
gtk = ["relm4"]
#gtk = ["relm4", "relm4-macros"]
#winui = ["native_windows_gui"]
